Rewrite extension to use actual Pi API, add tracing to bridge
- Rewrote extension.ts to use pi.registerProvider() with custom
  streamSimple, pi.registerCommand(), and pi.on() events
  (old code used nonexistent API: Provider, ExtensionContext, etc.)
- Fixed package.json: pi-ai ^0.52.0, added pi-coding-agent dep,
  correct pi.extensions entry point
- Added verbose logging and tracing to bridge server.py:
  prompt sizes, RLM config, UsageSummary extraction, cwd fix
- Updated README with correct usage (--provider rlm --model rlm-default)
- Verified end-to-end: 140KB prompt processed through RLM (5 recursive
  calls, 87K input tokens, coherent response in 31s)

--- a/package.json
+++ b/package.json
@@ -1,28 +1,14 @@
 {
   "name": "pi-rlm-extension",
-  "version": "0.1.0",
-  "description": "Pi extension that swaps LLM provider with RLM-backed provider",
-  "main": "extension.ts",
+  "version": "0.2.0",
+  "description": "Pi extension that routes completions through RLM (Recursive Language Model)",
   "type": "module",
-  "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch"
-  },
   "pi": {
-    "type": "extension",
-    "activationEvents": ["onStartup"],
-    "contributes": {
-      "providers": ["rlm"],
-      "commands": [
-        {
-          "command": "rlm",
-          "title": "Toggle RLM Mode"
-        }
-      ]
-    }
+    "extensions": ["./extension.ts"]
   },
   "devDependencies": {
-    "@mariozechner/pi-ai": "^0.1.0",
+    "@mariozechner/pi-ai": "^0.52.0",
+    "@mariozechner/pi-coding-agent": "^0.52.0",
     "typescript": "^5.0.0"
   },
   "keywords": ["pi", "extension", "rlm", "llm", "recursive"],
