chore: add rpi launcher, slim down extension.ts for Approach 4
- rpi: bash launcher that sets up RLM env and starts Pi with system prompt
- extension.ts: stripped to minimal status indicator (Approach 3 code removed)
- package.json: v0.4.0, removed heavy deps no longer needed

--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "pi-rlm-extension",
-  "version": "0.3.0",
-  "description": "Pi extension: recursive tool-use via completeWithTools() (Approach 3)",
+  "version": "0.4.0",
+  "description": "Pi extension: Recursive Language Model via rpi + rlm_query",
   "type": "module",
   "pi": {
     "extensions": ["./extension.ts"]
   },
-  "dependencies": {
-    "@mariozechner/pi-ai": "file:../pi-mono/packages/ai",
-    "@sinclair/typebox": "^0.34.41"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@mariozechner/pi-coding-agent": "^0.52.0",
     "typescript": "^5.0.0"
   },
-  "keywords": ["pi", "extension", "rlm", "tool-use", "recursive"],
+  "keywords": ["pi", "extension", "rlm", "recursive"],
   "license": "MIT"
 }
