--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pi-rlm-extension",
+  "name": "ypi",
   "version": "0.4.0",
-  "description": "Pi extension: Recursive Language Model via rpi + rlm_query",
+  "description": "Pi extension: Recursive Language Model via ypi + rlm_query",
   "type": "module",
   "pi": {
     "extensions": ["./extension.ts"]
