cleanup: remove deprecated code, add sops/age encryption
Remove deprecated approach artifacts:
- rlm_bridge/ (Python Flask bridge server — replaced by rlm_query)
- extension.ts (Pi status bar extension — unused)
- package.json, tsconfig.json, bun.lock (Node/TS tooling)
- ARCHITECTURE.md (outdated, key insights in AGENTS.md)

Add sops/age encryption for private/ directory:
- .sops.yaml: age encryption rules for private/**
- private/README.md: encrypted usage instructions
- .githooks/pre-commit: gitleaks + sops encryption check

Update .gitignore for ypi-only project structure.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
-# Dependencies
-node_modules/
-__pycache__/
-*.pyc
-.venv/
-venv/
-
-# Build output
-dist/
-*.js
-*.js.map
-*.d.ts
+# ypi — recursive coding agent wrapping Pi
 
 # Environment
 .env
@@ -23,5 +12,14 @@ dist/
 .DS_Store
 Thumbs.db
 
-# Logs
+# Logs & traces
 *.log
+/tmp/
+
+# Python (if any scripts added)
+__pycache__/
+*.pyc
+.venv/
+
+# Node (pi-mono submodule has its own)
+node_modules/
