--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ Thumbs.db
 *.log
 /tmp/
 
+# OpenProse runtime state
+.prose/runs/
+.prose/agents/
+
 # Python (if any scripts added)
 __pycache__/
 *.pyc
