feat: rlm_sessions shared session log reader
- Add rlm_sessions tool: list, read, grep across Pi session logs
- RLM_SHARED_SESSIONS gate (default=1, set 0 to disable)
- --trace flag filters sessions to current recursive tree
- Session rendering: JSONL → readable transcript
- Export RLM_SHARED_SESSIONS from rlm_query to propagate to children
- Unit tests G48-G51: gate behavior, trace filtering
- Document in SYSTEM_PROMPT.md and AGENTS.md

--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "ypi": "./ypi",
     "rlm_query": "./rlm_query",
     "rlm_cost": "./rlm_cost",
-    "rlm_parse_json": "./rlm_parse_json"
+    "rlm_parse_json": "./rlm_parse_json",
+    "rlm_sessions": "./rlm_sessions"
   },
   "files": [
     "ypi",
     "rlm_query",
     "rlm_cost",
     "rlm_parse_json",
+    "rlm_sessions",
     "SYSTEM_PROMPT.md",
     "install.sh",
     "README.md",
