--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "ypi",
+  "name": "@monotykamary/ypi",
   "version": "0.5.0",
   "description": "ypi — a recursive coding agent. Pi that can call itself via rlm_query.",
   "license": "MIT",
   "author": "Raymond Weitekamp",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rawwerks/ypi.git"
+    "url": "https://github.com/monotykamary/ypi.git"
   },
-  "homepage": "https://github.com/rawwerks/ypi#readme",
+  "homepage": "https://github.com/monotykamary/ypi#readme",
   "bugs": {
-    "url": "https://github.com/rawwerks/ypi/issues"
+    "url": "https://github.com/monotykamary/ypi/issues"
   },
   "keywords": [
     "ai",
